k8s_deploy/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-server
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: www.njwjxy.cn
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: backend-server
                port:
                  number: 5000
            path: /
          - path: /api/qwen-tts
            pathType: Prefix
            backend:
              service:
                name: tts-server
                port:
                  number: 3000  # 请根据实际服务端口修改
          - path: /medicine-images
            pathType: Prefix
            backend:
              service:
                name: my-minio
                port:
                  number: 9000  # 请根据实际服务端口修改
          - path: /cat-litter
            pathType: Prefix
            backend:
              service:
                name: my-minio
                port:
                  number: 9000  # 请根据实际服务端口修改
          - path: /cat-video
            pathType: Prefix
            backend:
              service:
                name: my-minio
                port:
                  number: 9000  # 请根据实际服务端口修改
          - path: /api/add_recycle
            pathType: Prefix
            backend:
              service:
                name: maoning-yaozha-server
                port:
                  number: 5000  # 请根据实际服务端口修改
          - path: /api/get_recycles
            pathType: Prefix
            backend:
              service:
                name: maoning-yaozha-server
                port:
                  number: 5000  # 请根据实际服务端口修改
          - path: /api/get_recycle
            pathType: Prefix
            backend:
              service:
                name: maoning-yaozha-server
                port:
                  number: 5000  # 请根据实际服务端口修改
          - path: /api/update_state
            pathType: Prefix
            backend:
              service:
                name: maoning-yaozha-server
                port:
                  number: 5000  # 请根据实际服务端口修改
          - path: /api/recycle_summary
            pathType: Prefix
            backend:
              service:
                name: maoning-yaozha-server
                port:
                  number: 5000  # 请根据实际服务端口修改
          - path: /api/recycle_by_unit
            pathType: Prefix
            backend:
              service:
                name: maoning-yaozha-server
                port:
                  number: 5000  # 请根据实际服务端口修改
          - path: /api/maoning_maosha
            pathType: Prefix
            backend:
              service:
                name: maoning-maosha-server
                port:
                  number: 5000  # 请根据实际服务端口修改
          - path: /api/maoning_maoshashiyong
            pathType: Prefix
            backend:
              service:
                name: maoning-maoshashiyong-server
                port:
                  number: 5000  # 请根据实际服务端口修改
  tls:
    - hosts:
      - www.njwjxy.cn
      secretName: ingress-tls
